--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "@nuxt/typescript-build": "^2.1.0",
     "husky": "^8.0.3",
     "prettier": "^3.1.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run check && npm run format"
+    }
   }
 }
